k8s/03-1.deployments-api-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnd-com-api-gateway
  namespace: cnd-dev
  labels:
    app: cnd-com-api-gateway
    app.kubernetes.io/name: api-gateway
    project: cnd-com          # <- 프로젝트 단위 라벨 추가
    environment: dev          # <- 환경 구분 라벨
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnd-com-api-gateway
      project: cnd-com          # <- 프로젝트 단위 라벨 추가
      environment: dev          # <- 환경 구분 라벨
  template:
    metadata:
      labels:
        app: cnd-com-api-gateway
        app.kubernetes.io/name: api-gateway
        project: cnd-com          # <- 프로젝트 단위 라벨 추가
        environment: dev          # <- 환경 구분 라벨
    spec:
      containers:
        - name: cnd-com-api-gateway
          image: cnd/cnd-com-api-gateway:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: cnd-dev
  labels:
    app: api-gateway
    app.kubernetes.io/name: api-gateway
    project: cnd-com        # 프로젝트 라벨 추가 가능
spec:
  selector:
    app: cnd-com-api-gateway
    project: cnd-com        # Pod template에 있는 라벨과 일치해야 선택됨
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
