k8s/03-4.deployments-res.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnd-res-reserve
  namespace: cnd-dev
  labels:
    app: cnd-res-reserve
    app.kubernetes.io/name: reserve-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnd-res-reserve
  template:
    metadata:
      labels:
        app: cnd-res-reserve
        app.kubernetes.io/name: reserve-service
    spec:
      containers:
        - name: cnd-res-reserve
          image: cnd/cnd-res-reserve:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reserve-service
  namespace: cnd-dev
  labels:
    app: reserve-service
    app.kubernetes.io/name: reserve-service
spec:
  selector:
    app: cnd-res-reserve
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
