k8s/04.cnd-ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cnd-ingress-gateway
  namespace: cnd-dev
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cnd-http-route
  namespace: cnd-dev
spec:
  parentRefs:
    - name: cnd-ingress-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth/
        - path:
            type: PathPrefix
            value: /api/test/
        - path:
            type: PathPrefix
            value: /.well-known/
      backendRefs:
        - name: auth-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/members/v1
      backendRefs:
        - name: member-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/reserves/v1
      backendRefs:
        - name: reserve-service
          port: 80
