k8s/06.cnd-authorization-policy-non-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-auth-endpoints
  namespace: cnd-dev
spec:
  selector:
    matchLabels:
      istio-injection: enabled
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - "/api/auth/login"
              - "/api/auth/register"
              - "/api/auth/logout"
              - "/.well-known/jwks.jason"
